fix(spacing): Fix general spacing in theme to make it more compact
Fix general spacing in theme to make it more compact

--- a/css/foundry.css
+++ b/css/foundry.css
@@ -28,8 +28,15 @@ h6 {
     font-family: var(--font-h6), "serif";
 }
 
+h1, h2, h3, h4 {
+    margin: 0;
+}
+
+.sheet.journal-entry .journal-entry-page :is(h1, h2, h3, h4, h5, h6):not(:first-child) {
+    margin-top: 0.2rem;
+}
+
 body, textarea {
-    line-height: 1.5;
     font-family: var(--font-body), "serif";
 }
 
@@ -56,8 +63,12 @@ input:not(:is(.journal-header, .tor2e.sheet) input) {
 }
 
 a.scene-name {
-    font-family: var(--font-h4), "serif";
-    font-size: var(--font-h4-size);
+    font-family: var(--font-h6), "serif";
+    font-size: var(--font-size-6);
+}
+
+#navigation #scene-list .scene.gm {
+    border: 1px solid var(--color-text-dark-header);
 }
 
 .notes, .hint {
@@ -105,11 +116,6 @@ select:focus {
     color: var(--color-text-dark-header);
 }
 
-.window-content:not(:is(.tor2e-cb-window-horizontal, #macros-popout, .journal-sheet, .tor2e-macrobar-window) .window-content) {
-    background: var(--color-light-1) url(../img/tor_bg.png) no-repeat;
-    background-size: cover;
-}
-
 .macros-sidebar h1, .macros-sidebar h2, .macros-sidebar h3,
 .macros-sidebar h4, .macros-sidebar h5, .macros-sidebar h6 {
     color: inherit;
@@ -138,6 +144,15 @@ li.folder > .folder-header h5 {
 
 li.folder > .folder-header h6 {
     font-size: var(--font-size-10);
+}
+
+.scenes-sidebar .scene h3,
+.compendium-sidebar .directory-item.compendium .compendium-name {
+    font-size: var(--font-size-12);
+}
+
+.playlists-sidebar h4 {
+    font-size: var(--font-size-12);
 }
 
 .sidebar-tab .directory-header .header-search input {
@@ -192,10 +207,6 @@ li.folder > .folder-header h6 {
     background: var(--color-warm-2);
 }
 
-.dice-roll, .message-timestamp {
-    font-family: var(--font-label), "serif";
-}
-
 .roll-event-message .label {
     font-family: var(--font-label), "serif";
 }
@@ -218,11 +229,13 @@ li.folder > .folder-header h6 {
 
 .chat-message h3 {
     font-family: var(--font-h3-bold), "serif";
+    font-size: var(--font-size-10);
 }
 
 .chat-message h4 {
     font-family: var(--font-h4-bold), "serif";
-    padding-bottom: 0.625em;
+    font-size: var(--font-size-8);
+    #color: var(--color-text-dark-header);
 }
 
 .chat-message h5 {
@@ -268,19 +281,14 @@ li.roll-characteristic.active.negative {
 }
 
 .dice-roll .dice-total, .treasure-header {
-    font-size: var(--font-size-15);
+    font-size: var(--font-size-12);
     color: var(--color-text-dark-header);
 }
-
-/*
-.dice-roll, .message-timestamp, .message-delete{
-    color: var(--color-text-dark-header);
-}
-*/
 
 .roll-message-body .roll-information-row .label, .formula p.label,
 .roll-characteristic-card p.label, .roll-combat-card p.label,
-.damage-card .block-title, .warn-card .block-title {
+.damage-card .block-title, .warn-card .block-title,
+.message-content .song-result-message .song-result-message-body .song-attribute-row .label {
     background: var(--color-text-dark-header);
 }
 
@@ -309,10 +317,6 @@ li.roll-characteristic.active.negative {
     text-align: center;
 }
 
-.tor2e-chatreports-endurance-box-endurance {
-    background-color: var(--color-border-dark-4) !important;
-}
-
 .display-description-message .display-description-message-body {
     background: var(--color-bg-light);
     border: unset;
@@ -320,6 +324,19 @@ li.roll-characteristic.active.negative {
 
 
 /* Journal */
+
+.journal-sheet .journal-header {
+    margin-top: 0.4rem;
+    margin-bottom: 0.2rem;
+}
+
+.journal-sheet p {
+    line-height: 1.2;
+}
+
+.journal-sheet p:empty {
+    min-height: 0.5rem;
+}
 
 .journal-sheet h1, .journal-sheet h2, .journal-sheet h3, .journal-sheet h4, .journal-sheet h5, .journal-sheet h6 {
     border-bottom: none;
@@ -365,7 +382,6 @@ li.roll-characteristic.active.negative {
     background-size: cover;
     border: 2px solid var(--color-border-dark);
     border-radius: 6px 0 0 0;
-    padding: 0 5px;
     font-size: var(--font-size-15);
     text-align: justify;
 }
@@ -404,10 +420,7 @@ li.roll-characteristic.active.negative {
 }
 
 .journal-page-content pre {
-    display: block;
-    unicode-bidi: unset;
     white-space: unset;
-    margin: 1em 0;
 }
 
 pre {
@@ -418,6 +431,7 @@ pre {
     text-align: justify;
 }
 
+.sheet-container .editor-content blockquote,
 .editor-container .editor-content blockquote,
 .journal-sheet blockquote {
     position: relative;
@@ -430,8 +444,10 @@ pre {
     padding: 0 20px;
 }
 
+.sheet-container .editor-content blockquote::before,
 .editor-container .editor-content blockquote::before,
 .journal-sheet blockquote::before,
+.sheet-container .editor-content blockquote::after,
 .editor-container .editor-content blockquote::after,
 .journal-sheet blockquote::after {
     content: "";
@@ -440,12 +456,13 @@ pre {
     height: 100%;
     background-size: contain;
     background-repeat: no-repeat;
-    top: 40%;
+    top: 50%;
     transform: translateY(-50%);
     background-position: center;
 }
 
 .community .editor-container .editor-content blockquote::before,
+.community .sheet-container .editor-content blockquote::before,
 .community .editor-container .editor-content blockquote::after {
     top: 60%;
 }
@@ -454,12 +471,14 @@ pre {
     z-index: 1;
 }
 
+.sheet-container .editor-content blockquote::before,
 .editor-container .editor-content blockquote::before,
 .journal-sheet blockquote::before {
     left: 0;
     background-image: url(../img/tor_border_left.png);
 }
 
+.sheet-container .editor-content blockquote::after,
 .editor-container .editor-content blockquote::after,
 .journal-sheet blockquote::after {
     right: 0;
@@ -467,42 +486,43 @@ pre {
 }
 
 .journal-page-content code,
+.sheet-container .editor-content code,
 .editor-container .editor-content code {
     font-family: var(--font-code), "serif";
     color: var(--color-text-dark-code);
     letter-spacing: 0.08125em;
     font-size: var(--font-size-13);
-}
-
-.journal-page-content code,
-.editor-container .editor-content code {
     position: relative;
     display: block; /* Ensure it takes full width */
-    padding: 45px 20px;
+    padding: 30px 20px;
 }
 
 .journal-page-content code::before,
 .journal-page-content code::after,
 .editor-container .editor-content code::before,
-.editor-container .editor-content code::after {
+.editor-container .editor-content code::after,
+.sheet-container .editor-content code::before,
+.sheet-container .editor-content code::after{
     content: "";
     position: absolute;
-    left: 50%;  /* Start positioning from the center */
-    transform: translateX(-50%); /* Shift the image back by half its width */
-    width: 350px;
-    height: 36px; /* Adjust based on image height */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 200px;
+    height: 20px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .journal-page-content code::before,
+.sheet-container .editor-content code:before,
 .editor-container .editor-content code:before {
     top: 0;
     background-image: url(../img/tor_border_top.png); /* Top border image */
 }
 
 .journal-page-content code::after,
+.sheet-container .editor-content code:after,
 .editor-container .editor-content code:after {
     bottom: 0;
     background-image: url(../img/tor_border_bottom.png); /* Bottom border image */
@@ -513,5 +533,14 @@ pre {
 }
 
 #players h3 {
-    font-size: var(--font-size-14);
+    font-size: var(--font-size-10);
+}
+
+#players .player-name {
+    font-family: var(--font-h3), "serif";
+    font-size: var(--font-size-8);
+}
+
+a.content-link, a.inline-roll {
+    background: var(--color-bg-light);
 }
