--- a/css/tor2e-macros.css
+++ b/css/tor2e-macros.css
@@ -1,5 +1,6 @@
 .tor2e-cb-text {
-    font-family: var(--font-label), "serif";
+    font-family: var(--font-h1), "serif";
+    font-size: var(--font-size-11);
 }
 
 .tor2e-chatreports-titre, .tor2e-chatreports-th {
@@ -10,10 +11,6 @@
 }
 
 .tor2e-macrobar-macrogroup-title {
-    font-family: var(--font-label), "serif";
-}
-
-.tor2e-macrobar-window .window-header {
-    background-color: var(--color-warm-2);
-    background-image: unset;
+    font-family: var(--font-h1), "serif";
+    font-size: var(--font-size-6);
 }
